; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_obs_encoder_packet_release.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_obs_encoder_packet_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.encoder_packet = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_encoder_packet_release(%struct.encoder_packet* %0) #0 {
  %2 = alloca %struct.encoder_packet*, align 8
  %3 = alloca i64*, align 8
  store %struct.encoder_packet* %0, %struct.encoder_packet** %2, align 8
  %4 = load %struct.encoder_packet*, %struct.encoder_packet** %2, align 8
  %5 = icmp ne %struct.encoder_packet* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %28

7:                                                ; preds = %1
  %8 = load %struct.encoder_packet*, %struct.encoder_packet** %2, align 8
  %9 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %25

12:                                               ; preds = %7
  %13 = load %struct.encoder_packet*, %struct.encoder_packet** %2, align 8
  %14 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to i64*
  %17 = getelementptr inbounds i64, i64* %16, i64 -1
  store i64* %17, i64** %3, align 8
  %18 = load i64*, i64** %3, align 8
  %19 = call i64 @os_atomic_dec_long(i64* %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %12
  %22 = load i64*, i64** %3, align 8
  %23 = call i32 @bfree(i64* %22)
  br label %24

24:                                               ; preds = %21, %12
  br label %25

25:                                               ; preds = %24, %7
  %26 = load %struct.encoder_packet*, %struct.encoder_packet** %2, align 8
  %27 = call i32 @memset(%struct.encoder_packet* %26, i32 0, i32 8)
  br label %28

28:                                               ; preds = %25, %6
  ret void
}

declare dso_local i64 @os_atomic_dec_long(i64*) #1

declare dso_local i32 @bfree(i64*) #1

declare dso_local i32 @memset(%struct.encoder_packet*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
